--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(crazyflie_cpp)
 
-if(DEFINED CATKIN_DEVEL_PREFIX)
-  message("Using ROS (catkin_make)")
-  include(${CMAKE_CURRENT_SOURCE_DIR}/ROS.cmake)
-else()
-  message("Using standard cmake")
-  include(${CMAKE_CURRENT_SOURCE_DIR}/CMake.cmake)
-endif()
+message("Using ROS (ament_cmake)")
+include(${CMAKE_CURRENT_SOURCE_DIR}/ROS.cmake)
+##if(DEFINED CATKIN_DEVEL_PREFIX)
+##  message("Using ROS (catkin_make)")
+##  include(${CMAKE_CURRENT_SOURCE_DIR}/ROS.cmake)
+##else()
+##  message("Using standard cmake")
+##  include(${CMAKE_CURRENT_SOURCE_DIR}/CMake.cmake)
+##endif()
